reworker tg commands and create config endpoint
