# src/types/categories.ts
@@ -1,1 +1,62 @@
-export type Categories = 'javascript' | 'ux';
+export type TJustJoinItCategories =
+    | 'all'
+    | 'javascript'
+    | 'html'
+    | 'php'
+    | 'ruby'
+    | 'python'
+    | 'java'
+    | 'net'
+    | 'scala'
+    | 'c'
+    | 'mobile'
+    | 'testing'
+    | 'devops'
+    | 'admin'
+    | 'ux'
+    | 'pm'
+    | 'game'
+    | 'analytics'
+    | 'security'
+    | 'data'
+    | 'go'
+    | 'support'
+    | 'erp'
+    | 'architecture'
+    | 'other';
+
+export type TNoFluffJobsCategories =
+    | 'backend'
+    | 'frontend'
+    | 'fullstack'
+    | 'mobile'
+    | 'embedded'
+    | 'testing'
+    | 'devops'
+    | 'architecture'
+    | 'security'
+    | 'gaming'
+    | 'artificial-intelligence'
+    | 'big-data'
+    | 'it-administrator'
+    | 'agile'
+    | 'product-management'
+    | 'project-manager'
+    | 'business-intelligence'
+    | 'business-analyst'
+    | 'ux'
+    | 'support'
+    | 'erp'
+    | 'electronics'
+    | 'telecommunication'
+    | 'electrical-eng'
+    | 'automation'
+    | 'robotics'
+    | 'mechanics'
+    | 'marketing'
+    | 'backoffice'
+    | 'hr'
+    | 'finance'
+    | 'consulting'
+    | 'customer-service'
+    | 'other';
