# src/types/index.ts
@@ -1,4 +1,5 @@
-export * from './categories';
-export * from './searchConfig';
-export * from './seniority';
 export * from './errors';
+export * from './categories';
+export * from './seniorities';
+export * from './apiContracts';
+export * from './technologies';
