# src/types/seniority.ts
@@ -1,1 +1,0 @@
-export type Seniority = 'senior' | 'mid' | 'junior' | 'expert';
